Add TRACE_EVENT in PushPullFIFO

It might be helpful to have TRACEs in Push() and Pull() method.

Bug: 801685
Change-Id: I33a0f23e2d60d5062dd4de26728fa2a566f3b21b
Reviewed-on: https://chromium-review.googlesource.com/879262
Reviewed-by: Raymond Toy <rtoy@chromium.org>
Commit-Queue: Hongchan Choi <hongchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530978}
Former-commit-id: 1b42aab70c61b09bb2d3c6881222dc8df4b98bc2